Menu déroulant account

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
         <nav class="nav">
             <ul>
-                <li>Account</li>
+                <li>Account
+                    <div class="links_account">
+                        
+                    </div>
+                </li>
                 <li>Send</li>
                 <li>Receive</li>
                 <li>Trade</li>
