icones bloc profil et diverses optimisations graphiques

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             </div>
             <div class="details">
                 <ul>
-                    <li>Domain</li>
-                    <li>Email Hash</li>
-                    <li>Message key</li>
-                    <li>Actived</li>
-                    <li>actived with</li>
-                    <li>Actived by</li>
-                    <li>Reserve</li>
+                    <li><i class="fas fa-link"></i>Domain</li>
+                    <li><i class="fas fa-envelope-open-text"></i>Email Hash</li>
+                    <li><i class="far fa-sticky-note"></i>Message key</li>
+                    <li><i class="fas fa-clipboard-check"></i>Actived</li>
+                    <li><i class="fas fa-gift"></i>actived with</li>
+                    <li><i class="fas fa-code-branch"></i>Actived by</li>
+                    <li><i class="fas fa-key"></i>Reserve</li>
                 </ul>
             </div>
         </div>
