Bloc transactions ok

--- a/index.html
+++ b/index.html
@@ -82,7 +82,43 @@
                 <p>Latest transactions</p>
                 <a href="#">View All</a>
             </div>
-            <div class="transactions__list"></div>
+            <div class="transactions__list">
+                <div>  
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.
+                    </p>
+                    <p class="time">2022-01-14, 09:54</p>
+                    <i class="fas fa-file-upload"></i>
+                </div>
+                <div>
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.
+                    </p>
+                    <p class="time">2022-01-14, 09:54</p>
+                    <i class="fas fa-file-upload"></i>
+                </div>
+                <div>
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.
+                    </p>
+                    <p class="time">2022-01-14, 09:54</p>
+                    <i class="fas fa-file-upload"></i>
+                </div>
+                <div>
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.
+                    </p>
+                    <p class="time">2022-01-14, 09:54</p>
+                    <i class="fas fa-file-upload"></i>
+                </div>
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, aliquam.
+                        </p>
+                        <p class="time">2022-01-14, 09:54</p>
+                        <i class="fas fa-file-upload"></i>
+                </div>
+            </div>
         </div>
 
     </main>
