Modélisation des cartes crypto

--- a/index.html
+++ b/index.html
@@ -66,11 +66,21 @@
         <div class="asset">
             <div class="asset_item asset1">
                 <div class="crypto"></div>
-                <div class="list_btn"></div>
+                <div class="list_btn">
+                    <div><i class="fas fa-file-upload"></i></div>
+                    <div><i class="fas fa-file-download"></i></div>
+                    <div><i class="fas fa-exchange-alt"></i></div>
+                    <div><i class="far fa-hourglass"></i></div>
+                </div>
             </div>
             <div class="asset_item asset2">
                     <div class="crypto"></div>
-                    <div class="list_btn"></div>
+                    <div class="list_btn">
+                        <div><i class="fas fa-file-upload"></i></div>
+                        <div><i class="fas fa-file-download"></i></div>
+                        <div><i class="fas fa-exchange-alt"></i></div>
+                        <div><i class="far fa-hourglass"></i></div>
+                    </div>
             </div>
             <div class="asset_item add_asset">
                 <p> <span>+</span> Add Asset</p>
