--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfeuille Crypto Thomas</title>
 </head>
@@ -14,10 +15,16 @@
 <body>
     <div class="loader"></div>
 
+    <nav class="navSmartphone navSmartphoneLeft"></nav>
+    <nav class="navSmartphone navSmartphoneRight"></nav>
+
     <header>
 
+        
+        <div class="btnNav--Left btnNav"></div>
+        <div class="btnNav--Right btnNav"></div>
 
-
+        
         <nav class="nav">
             <ul>
                 <li><i class="fas fa-wallet"></i>Account
@@ -42,7 +49,6 @@
                 </div>
             </h2>
         </nav>
-
     </header>
 
 
@@ -65,7 +71,11 @@
         </div>
         <div class="asset">
             <div class="asset_item asset1">
-                <div class="crypto"></div>
+                <div class="crypto">
+                    <p>4</p>
+
+                    <p>ETH</p>
+                </div>
                 <div class="list_btn">
                     <div><i class="fas fa-file-upload"></i></div>
                     <div><i class="fas fa-file-download"></i></div>
@@ -74,7 +84,10 @@
                 </div>
             </div>
             <div class="asset_item asset2">
-                    <div class="crypto"></div>
+                    <div class="crypto">
+                        <p>3000</p>
+                        <P>XRP</P>
+                    </div>
                     <div class="list_btn">
                         <div><i class="fas fa-file-upload"></i></div>
                         <div><i class="fas fa-file-download"></i></div>
