Préparation d'une animation

--- a/index.html
+++ b/index.html
@@ -22,13 +22,6 @@
         <div class="returnLeft"><i class="far fa-arrow-alt-circle-left"></i></div>
         <ul>
             <li><i class="fas fa-wallet"></i>Account
-                <!-- <div class="links_account">
-                    <a href="#"><i class="fas fa-chart-pie"></i>overview</a>
-                    <a href="#"><i class="fas fa-ticket-alt"></i>Assets</a>
-                    <a href="#"><i class="fas fa-piggy-bank"></i>Liabilities</a>
-                    <a href="#"><i class="fas fa-file-signature"></i>Signers</a>
-                    <a href="#"><i class="fas fa-cogs"></i>Properties</a>
-                </div> -->
             </li>
             <li><i class="fas fa-file-upload"></i>Send</li>
             <li><i class="fas fa-file-download"></i>Receive</li>
@@ -89,17 +82,17 @@
     <main>
         <div class="profil">
             <div class="photo">
-                <img src="" alt="">
+                <div class="crypto_logo"></div>
             </div>
             <div class="details">
                 <ul>
-                    <li><i class="fas fa-link"></i>Domain</li>
-                    <li><i class="fas fa-envelope-open-text"></i>Email Hash</li>
-                    <li><i class="far fa-sticky-note"></i>Message key</li>
-                    <li><i class="fas fa-clipboard-check"></i>Actived</li>
-                    <li><i class="fas fa-gift"></i>actived with</li>
-                    <li><i class="fas fa-code-branch"></i>Actived by</li>
-                    <li><i class="fas fa-key"></i>Reserve</li>
+                    <li><i class="fas fa-link"></i>Domain : <span>xxxxxx</span></li>
+                    <li><i class="fas fa-envelope-open-text"></i>Email Hash : <span>xxxxxx</span></li>
+                    <li><i class="far fa-sticky-note"></i>Message key : <span>xxxxxx</span></li>
+                    <li><i class="fas fa-clipboard-check"></i>Actived : <span>xxxxxx</span></li>
+                    <li><i class="fas fa-gift"></i>actived with : <span>xxxxxx</span></li>
+                    <li><i class="fas fa-code-branch"></i>Actived by : <span>xxxxxx</span></li>
+                    <li><i class="fas fa-key"></i>Reserve : <span>xxxxxx</span></li>
                 </ul>
             </div>
         </div>
@@ -128,6 +121,34 @@
                         <div><i class="fas fa-exchange-alt"></i></div>
                         <div><i class="far fa-hourglass"></i></div>
                     </div>
+            </div>
+
+            <div class="asset_item asset1">
+                <div class="crypto">
+                    <p>0.02</p>
+
+                    <p>BTC</p>
+                </div>
+                <div class="list_btn">
+                    <div><i class="fas fa-file-upload"></i></div>
+                    <div><i class="fas fa-file-download"></i></div>
+                    <div><i class="fas fa-exchange-alt"></i></div>
+                    <div><i class="far fa-hourglass"></i></div>
+                </div>
+            </div>
+
+            <div class="asset_item asset1">
+                <div class="crypto">
+                    <p>41000 </p>
+
+                    <p>XDC</p>
+                </div>
+                <div class="list_btn">
+                    <div><i class="fas fa-file-upload"></i></div>
+                    <div><i class="fas fa-file-download"></i></div>
+                    <div><i class="fas fa-exchange-alt"></i></div>
+                    <div><i class="far fa-hourglass"></i></div>
+                </div>
             </div>
             <div class="asset_item add_asset">
                 <p> <span>+</span> Add Asset</p>
