Terrain pour l'animation : ok

--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
     <main>
         <div class="profil">
             <div class="photo">
-                <div class="crypto_logo"></div>
+                <div class="crypto_logo crypto_logo_xrp"></div>
+                <div class="crypto_logo crypto_logo_eth"></div>
+                <div class="crypto_logo crypto_logo_btc"></div>
+                <div class="crypto_logo crypto_logo_xdc"></div>
             </div>
             <div class="details">
                 <ul>
