Animation fonctionnelle, MAIS : xdc bugué, xrp et eth inversés ??

--- a/index.html
+++ b/index.html
@@ -82,10 +82,18 @@
     <main>
         <div class="profil">
             <div class="photo">
-                <div class="crypto_logo crypto_logo_xrp"></div>
-                <div class="crypto_logo crypto_logo_eth"></div>
-                <div class="crypto_logo crypto_logo_btc"></div>
-                <div class="crypto_logo crypto_logo_xdc"></div>
+                <div class="crypto_logo crypto_logo--xrp">
+                    <div class="img"></div>
+                </div>
+                <div class="crypto_logo crypto_logo--eth">
+                    <div class="img"></div>
+                </div>
+                <div class="crypto_logo crypto_logo--btc">
+                    <div class="img"></div>
+                </div>
+                <div class="crypto_logo crypto_logo--xdc">
+                    <div class="img"></div>
+                </div>
             </div>
             <div class="details">
                 <ul>
@@ -103,7 +111,6 @@
             <div class="asset_item asset1">
                 <div class="crypto">
                     <p>4</p>
-
                     <p>ETH</p>
                 </div>
                 <div class="list_btn">
@@ -126,7 +133,7 @@
                     </div>
             </div>
 
-            <div class="asset_item asset1">
+            <div class="asset_item asset3">
                 <div class="crypto">
                     <p>0.02</p>
 
@@ -140,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="asset_item asset1">
+            <div class="asset_item asset4">
                 <div class="crypto">
                     <p>41000 </p>
 
