Xdc bugué : loader en superposition.., xrp et eth problème réglé

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <body>
-    <div class="loader"></div>
+    <!-- <div class="loader"></div> -->
 
     <nav class="navSmartphone navSmartphoneLeft">
         <div class="returnLeft"><i class="far fa-arrow-alt-circle-left"></i></div>
@@ -82,10 +82,10 @@
     <main>
         <div class="profil">
             <div class="photo">
-                <div class="crypto_logo crypto_logo--xrp">
+                <div class="crypto_logo crypto_logo--eth">
                     <div class="img"></div>
                 </div>
-                <div class="crypto_logo crypto_logo--eth">
+                <div class="crypto_logo crypto_logo--xrp">
                     <div class="img"></div>
                 </div>
                 <div class="crypto_logo crypto_logo--btc">
